bk_ida/sjengida/g2/f_in_check
/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/f_in_check/src/moves.c:1347:19: error: use of undeclared identifier 'knight_o_3'
v20 = ( _BYTE *)( knight_o_3 + 4); 
                  ^
/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/f_in_check/src/moves.c:1755:19: error: use of undeclared identifier 'knight_o_3'
v28 = ( _BYTE *)( knight_o_3 + 4); 
                  ^
2 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/f_in_check/src/obj/moves.o] Error 1
